--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,16 @@ readme = "README.md"
 python = "^3.10"
 django-ninja = "^0.21.0"
 psycopg2 = "^2.9.6"
+mypy = "^1.2.0"
+django-stubs = "^1.16.0"
+pre-commit = "^3.2.2"
+pyupgrade = "^3.3.1"
+autoflake = "^2.0.2"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.3.0"
+pylint = "^2.17.2"
 
 [build-system]
 requires = ["poetry-core"]
