--- a/Backend/capstone/pom.xml
+++ b/Backend/capstone/pom.xml
@@ -36,7 +36,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.12.2</version>
+		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
