--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
         - bash
         - -c
         - |
+            poetry run python core/manage.py makemigrations
             poetry run python core/manage.py migrate
             poetry run python core/manage.py runserver 0.0.0.0:8000
     volumes:
@@ -18,10 +19,20 @@ services:
       - postgres
     env_file:
       - .env
+    deploy:
+      restart_policy:
+        condition:  unless-stopped
+        delay: 5s
+    
 
   postgres:
     image: postgres:15.2-bullseye
     ports:
       - "5432:5432"
     env_file:
-      - .env
+       - .env
+    volumes:
+      - backend_vol:/var/lib/postgresql/data
+
+volumes:
+  backend_vol:
