--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ django-stubs = "^1.16.0"
 pre-commit = "^3.2.2"
 pyupgrade = "^3.3.1"
 autoflake = "^2.0.2"
+django-filter = "^23.1"
+
 
 
 [tool.poetry.group.dev.dependencies]
