--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ POSTGRES_USER=user
 POSTGRES_PASSWORD=pass
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
+
+DJ_SU_USER=admin
+DJ_SU_MAIL=admin@admin.com
+DJ_SU_PASS=pass
