--- a/Backend/capstone/src/main/resources/application.properties
+++ b/Backend/capstone/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.data.elasticsearch.repositories.enabled=true
+spring.elasticsearch.rest.uris=localhost:9200
+spring.elasticsearch.rest.connection-timeout=1s
+spring.elasticsearch.rest.read-timeout=1m
+spring.elasticsearch.rest.password="changeme"
+spring.elasticsearch.rest.username="elastic"
