--- a/Backend/capstone/src/main/resources/application.properties
+++ b/Backend/capstone/src/main/resources/application.properties
@@ -4,3 +4,13 @@ spring.elasticsearch.rest.connection-timeout=1s
 spring.elasticsearch.rest.read-timeout=1m
 spring.elasticsearch.rest.password="changeme"
 spring.elasticsearch.rest.username="elastic"
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/unifiedproducts
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
