--- a/Backend/capstone/src/main/resources/application.properties
+++ b/Backend/capstone/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.data.elasticsearch.repositories.enabled=true
-spring.elasticsearch.rest.uris=localhost:9200
-spring.elasticsearch.rest.connection-timeout=1s
-spring.elasticsearch.rest.read-timeout=1m
-spring.elasticsearch.rest.password="changeme"
-spring.elasticsearch.rest.username="elastic"
+spring.elasticsearch.uris=https://localhost:9200
+spring.elasticsearch.username="elastic"
+spring.elasticsearch.password="changeme"
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/unifiedproducts
