--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pre-commit = "^3.2.2"
 pyupgrade = "^3.3.1"
 autoflake = "^2.0.2"
 django-filter = "^23.1"
+django-extensions = "^3.2.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
