--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ django-filter = "^23.1"
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
 pylint = "^2.17.2"
+django-filter-stubs = "^0.1.3"
 
 [build-system]
 requires = ["poetry-core"]
